Implement initial backend server setup

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://hailolaa21:Moadsahaka%4021@elderlycare.n6mkod3.mongodb.net/habit-flow?appName=ElderlyCare
+PORT: 5000
+JWT_SECRET=am-hailolla-21
